# graphprograms

./: .gitignore  Makefile  README.md  example.py  mygraph.py  mytest.py  setup.cfg  setup.py
datagraph_factory/: README.md  __init__.py  constants.py  datagraph.py  find_process_path.py  linear_factorybranch.py  processes.py  test_datagraph_factory.py  utils.py  visualizer.py
datagraph_factory/automatic_directory/: __init__.py  create_program_from_datagraph.py  create_program_from_datagraph_firsttry.py  filehandler.py
datagraph_factory/utils/: __init__.py  asdf_flowgraph_plot.py  create_flowgraph_with_visualize_from_module.py  list_leafs.py  load_datagraph_from_directory.py
datagraph_factory/visualize/: __init__.py  flowgraph_plot.py
graphtoarithmetic/: __init__.py  graphtoarithmetic.py
networkxarithmetic/: __init__.py  networkxarithmetic.py  test_networkxarithmetic.py
newthing/: graphtoflowcontrol.py  test_newthing.py
src/networkxarithmetic/: test_networkxarithmetic.py
treetobehaviour/: README  __init__.py  algorithm.py  classes.py  container.py
