[metadata]
name = graphtoarithmetic
version = 0.2
description= helper package for transforming a graph to arithmetic
author = Richard Fechner
#requires = ['numpy', 'numba', 'networkx']

[options]
packages= find:
#scripts=
#	graphtoarithmetic/graphtoarithmetic.py
#	networkxarithmetic/networkxarithmetic.py


[options.packages.find]
