[metadata]
name = graphtoarithmetic
version = 0.3
description= helper package for transforming a graph to arithmetic
author = Richard Fechner
#requires = ['numpy', 'numba', 'networkx']

[options]
packages=graphtoarithmetic, newthing, networkxarithmetic, treetobehaviour, datagraph_factory,
install_requires =
	requests
	importlib; python_version == "2.6"
#scripts=
#	graphtoarithmetic/graphtoarithmetic.py
#	networkxarithmetic/networkxarithmetic.py


[options.packages.find]
