[metadata]
name = graphtoarithmetic
version = 0.3
description= helper package for transforming a graph to arithmetic
author = Richard Fechner
#requires = ['numpy', 'numba', 'networkx']

[options]
packages=graphtoarithmetic, newthing, networkxarithmetic, treetobehaviour, datagraph_factory, datagraph_factory.visualize, datagraph_factory.utils, datagraph_factory.automatic_directory
install_requires =
	requests
	importlib; python_version == "2.6"
#scripts=
#	graphtoarithmetic/graphtoarithmetic.py
#	networkxarithmetic/networkxarithmetic.py


[options.packages.find]
